--- a/src/STYLES/_min_width_280px.scss
+++ b/src/STYLES/_min_width_280px.scss
@@ -51,7 +51,7 @@
                 width:400px;
                 height: 400px;
                 top: -15px;
-                left: -1px;
+                left:0;
                 box-shadow:2px 15px 5px rgba(0, 0, 0, 0.40);
             }
         }
