imports arrow_down.scss, min_width_540px.scss, min_width_560px.scss files

--- a/src/STYLES/style.scss
+++ b/src/STYLES/style.scss
@@ -20,6 +20,7 @@
 @import './post_its';
 @import './window';
 @import './floor';
+@import './arrow_down';
 @import './react_awesome_slider';
 @import './min_width_280px';
 @import './min_width_350px';
@@ -27,6 +28,8 @@
 @import './min_width_411px';
 @import './min_width_414px';
 @import './min_width_510px';
+@import './min_width_540px';
+@import './min_width_560px';
 @import './min_width_600px';
 @import './min_width_730px';
 @import './min_width_740px';
