changes styling of mdl-button for different screen sizes

--- a/src/STYLES/_min_width_1280px.scss
+++ b/src/STYLES/_min_width_1280px.scss
@@ -17,12 +17,10 @@
     .mdl-button{
         display: block;
         left: 1000px;
+        top: 500px;
     }
 
     @keyframes arrow-up-and-down {
-        from {
-          top: 500px
-        }
         to {
           top: 550px;
         }
