changes styling of codepen

--- a/src/STYLES/_min_width_510px.scss
+++ b/src/STYLES/_min_width_510px.scss
@@ -53,6 +53,13 @@
       height: 600px !important;
     }
 
+    .project-div{
+        .codepen{
+            width: 70%;
+            margin: 0 auto;
+        }
+    }
+
     .skill-slide{
         .front-end{
             padding-top: 50px;
